# sme-kt-zh-collaboration-rag

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  md_deplyoment.md  project.toml  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: tests.yml
backend/: Dockerfile  README.md  environment.yml  pyproject.toml  requirements.txt
backend/notebooks/: feature0_baseline_rag.ipynb  feature1_evaluation.ipynb  feature1_ingestion.ipynb  feature2_structured_outputs.ipynb
backend/src/sme_kt_zh_collaboration_rag/: baseline_rag.py  baseline_rag_sdsc_qwen.py  feature0_baseline_rag.py  feature0_ingestion.py  feature1_evaluation.py
backend/src/sme_kt_zh_collaboration_rag/utils/: json.py
conversational-toolkit/: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml  pyrightconfig.json  requirements.txt
conversational-toolkit/examples/: simple_agent.py  simple_agent_with_passcode.py  simple_rag.py
conversational-toolkit/src/conversational_toolkit/: __init__.py
data/: ART_product_overview.xlsx  ART_response_inquiry_frische_felder.md  EVALUATION_qa_ground_truth.md
frontend/: .eslintrc.json  .prettierrc  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/: config.ts
frontend/src/@types/: i18next.d.ts
frontend/src/hooks/: useDisclaimer.tsx  useMediaQuery.tsx  useMessaging.tsx  usePrevious.tsx  useTheme.tsx
frontend/src/lib/: conversation.ts  lorem.ts  thread.ts  throttle.ts
tests/: test_version.py
(+112 files in other folders)
