[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sme_kt_zh_collaboration_rag"
authors = [
    # { name = "Thibaut Loiseau", email = "thibaut.loiseau@epfl.ch" },
    # { name = "Ivan-Daniel Sievering", email = "ivan.sievering@epfl.ch" },
    # { name = "Paulina Körner", email = "paulina.koerner@sdsc.ethz.ch" },
]
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "notebook==7.4.4",
    "pre-commit==4.2.0",
    "pytest==8.4.1",
    "ruff==0.12.3",
    "chromadb==1.4.1",
    "sentence-transformers==5.1.1",
    "openai==2.21.0",
    "ollama==0.6.1",
    "numpy==2.3.3",
    "fastapi==0.115.14",
    "jupyter==1.1.1",
    "pymupdf4llm==0.3.4",
]
dynamic = ["version"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "sme_kt_zh_collaboration_rag.__version__"}

[tool.ruff]
extend-include = ["*.ipynb"]
target-version = "py310"
line-length = 88
